Fix: corregir coma a espacio en .latest-container (gap)(style.css)

--- a/public/style.css
+++ b/public/style.css
@@ -232,7 +232,7 @@ button.sign-up:hover {
 .latest-container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 3rem, 2rem;
+  gap: 3rem 2rem;
 }
 
 .latest-posts {
